# TUM

./: README.md
3DS/: README.md
3DScanning/: .gitmodules  LICENSE  README.md
AIM/: README.md
AML/: LICENSE  README.md
AML/aml23ex1-ge47ras/: project_1.ipynb
AML/aml23ex4-ge47ras/: ddpm.ipynb
AML/practical exercises/aml23ex1/: .gitignore  pyproject.toml
AML/practical exercises/aml23ex1/flows/: loss.py  nf_utils.py
BSE/: README.md
CV2/: README.md
CV3/: .gitignore  README.md
DM/: README.md
I2DL/: .gitignore  README.md
I2QC/: README.md
ML/: README.md
ML/homework/: exercise_02_notebook.ipynb  exercise_03_prob_inference.ipynb  exercise_04_linear_regression.ipynb
ML/homework solution/: exercise_solution_02_notebook.ipynb
ML/in-class exercise solution/: inclass_04_notebook.ipynb
ML43D/: README.md
ML43D-TUM/: .gitmodules
ML43D/E3/: exercise_3.ipynb
MLGS/: README.md
MLGS/mlgs22ex6/: attacks.py  part_3_randomized_smoothing_training.ipynb  training_and_evaluation.py
MLGS/mlgs23ex1/: generator.py  requirements.txt  task_01_hidden_markov_model.ipynb
MLGS/mlgs23ex2/: data.py
MLGS/mlgs23ex4/: clustering.py
MLGS/mlgs23ex5/: A_indices.pt  graph_neural_networks.ipynb
NLP/: README.md
PE/: README.md
PP/: .gitignore  README.md
PP/homework-1/: vv-aes.h
PP/homework-2/: Makefile  raytracer.h  student_submission_old.cpp
PP/homework-3/: Makefile  Utility.cpp  sequential_implementation.cpp
PP/homework-4/: sequential_implementation.cpp
PP/homework-5/: Makefile  Utility.h
PP/homework-6/: sequential_implementation.cpp  (+1 more)
(+350 files in other folders)
